Fix spacing in schedule

--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -58,8 +58,6 @@
   .titolo-evento{
     @extend h3;
         color: $accent2;
-        margin-top: 0.1em;
-        margin-bottom: 0.7em;
 
   }
 
@@ -77,7 +75,8 @@
         margin-top: 0.5em;
         text-align: right;
         background-color: $accent2;
-        margin-bottom: 1em;
+        margin-bottom: 0.2em;
+        margin-top: 0.7em;
         border-radius: 0.5em;
     }
 
@@ -141,7 +140,7 @@
 
     @media screen and (max-width: $medium) {*/
       &.evento{
-        min-height: 7em;
+        min-height: 2em;
       }
    // }
   }
